--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,6 +2,7 @@
 @import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 @import './common.scss';
 @import './header.scss';
+@import './movies.scss';
 
 :root {
 	--primary: #ed2517;
