Create Login Page

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,6 +3,7 @@
 @import './common.scss';
 @import './header.scss';
 @import './movies.scss';
+@import './login.scss';
 
 :root {
 	--primary: #ed2517;
