Create Layout & Searchbar Component

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -4,6 +4,7 @@
 @import './header.scss';
 @import './movies.scss';
 @import './login.scss';
+@import './searchbar.scss';
 
 :root {
 	--primary: #ed2517;
