--- a/src/style/movies.scss
+++ b/src/style/movies.scss
@@ -1,19 +1,20 @@
 .movies {
 	margin-top: 50px;
 	&_row {
-		display: flex;
+		display: grid;
+		grid-auto-flow: column;
+		grid-template-columns: repeat(6, minmax(0, 1fr));
+		grid-gap: 0.5rem;
+		gap: 0.5rem;
 		&__col {
-			flex: 1;
-			width: 16%;
+			// flex: 1;
+			// width: 16%;
 			margin-right: 4px;
-			overflow: hidden;
+			// overflow: hidden;
+			width: 100%;
 
 			img {
 				width: 100%;
-			}
-
-			&:last-child {
-				margin-right: 0;
 			}
 		}
 	}
